--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # LaTeX
-main.aux
-main.log
-main.out
-main.pdf
+*.aux
+*.log
+*.out
+numcal.pdf
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
