--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
 # LaTeX
-*.aux
-*.bbl
-*.blg
-*.log
-*.out
+main.aux
+main.bbl
+main.blg
+main.log
+main.out
+main.nav
+main.snm
+main.toc
+main.vrb
 main.pdf
-numcalc.pdf
 
 # C
 *.o
 numcalc
+
+# misc
+*~
+*.swp
+tmp
